--- a/server/static/index.html
+++ b/server/static/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <div id="fb-root"></div>
-  <h1>Hello React</h1>
+  <h1>Hello Fablr</h1>
 <div id="fablr-app"></div>
 <script >
   (function(d, s, id){
