--- a/server/static/index.html
+++ b/server/static/index.html
@@ -17,6 +17,6 @@
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
 </script>
-<script src="./build/fablr.js"></script>
+<script src="./build/bundle.fablr.js"></script>
 </body>
 </html>
